// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditModelInput it renders a brand field that has data that is found 1`] = `
<Fragment>
  <BrandSelect
    bikeOnly={false}
    brandSelected={2}
    brands={
      Array [
        Object {
          "brand_name": "id is 1",
          "id": 1,
        },
        Object {
          "brand_name": "find me",
          "id": 2,
        },
        Object {
          "brand_name": "id is 3",
          "id": 3,
        },
      ]
    }
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</Fragment>
`;

exports[`EditModelInput it renders a brand field that has data that is not found 1`] = `
<Fragment>
  <BrandSelect
    bikeOnly={false}
    brandSelected={202}
    brands={
      Array [
        Object {
          "brand_name": "id is 1",
          "id": 1,
        },
        Object {
          "brand_name": "find me",
          "id": 2,
        },
        Object {
          "brand_name": "id is 3",
          "id": 3,
        },
      ]
    }
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</Fragment>
`;

exports[`EditModelInput it renders a brand field that has no data 1`] = `
<Fragment>
  <BrandSelect
    bikeOnly={false}
    brands={
      Array [
        Object {
          "brand_name": "id is 1",
          "id": 1,
        },
        Object {
          "brand_name": "find me",
          "id": 2,
        },
        Object {
          "brand_name": "id is 3",
          "id": 3,
        },
      ]
    }
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</Fragment>
`;

exports[`EditModelInput it renders a checkbox field that has no data 1`] = `
<Fragment>
  <input
    checked={false}
    className=""
    data-test="model-checkbox"
    name="data_field120"
    onChange={[Function]}
    type="checkbox"
  />
</Fragment>
`;

exports[`EditModelInput it renders a checkbox field that is false 1`] = `
<Fragment>
  <input
    checked={false}
    className=""
    data-test="model-checkbox"
    name="data_field120"
    onChange={[Function]}
    type="checkbox"
  />
</Fragment>
`;

exports[`EditModelInput it renders a checkbox field that is true 1`] = `
<Fragment>
  <input
    checked={true}
    className=""
    data-test="model-checkbox"
    name="data_field120"
    onChange={[Function]}
    type="checkbox"
  />
</Fragment>
`;

exports[`EditModelInput it renders a country field that has data 1`] = `
<Fragment>
  <CountrySelect
    countrySelected="NZ"
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</Fragment>
`;

exports[`EditModelInput it renders a country field that has no data 1`] = `
<Fragment>
  <CountrySelect
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</Fragment>
`;

exports[`EditModelInput it renders a currency field that has data 1`] = `
<Fragment>
  <FormTextInput
    className=""
    dataType="text"
    error=""
    fieldName="data_field120"
    inputClass="align_right"
    label=""
    list=""
    maxLength={10}
    onChange={[Function]}
    onClick={[Function]}
    placeholder=""
    size={30}
    title=""
    value="23.9"
  />
</Fragment>
`;

exports[`EditModelInput it renders a currency field that has no data 1`] = `
<Fragment>
  <FormTextInput
    className=""
    dataType="text"
    error=""
    fieldName="data_field120"
    inputClass="align_right"
    label=""
    list=""
    maxLength={10}
    onChange={[Function]}
    onClick={[Function]}
    placeholder=""
    size={30}
    title=""
    value=""
  />
</Fragment>
`;

exports[`EditModelInput it renders a part Type field that has no data 1`] = `
<Fragment>
  <PartTypeSelect
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
    sections={
      Array [
        Object {
          "id": 1,
          "partTypes": Array [
            Object {
              "id": 11,
              "name": "id 11",
            },
            Object {
              "id": 21,
              "name": "id 11",
            },
          ],
        },
        Object {
          "id": 2,
          "partTypes": Array [
            Object {
              "id": 2,
              "name": "find me",
            },
            Object {
              "id": 22,
              "name": "id 11",
            },
          ],
        },
      ]
    }
  />
</Fragment>
`;

exports[`EditModelInput it renders a part type field that has data that is found 1`] = `
<Fragment>
  <PartTypeSelect
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
    partTypeSelected={2}
    sections={
      Array [
        Object {
          "id": 1,
          "partTypes": Array [
            Object {
              "id": 11,
              "name": "id 11",
            },
            Object {
              "id": 21,
              "name": "id 11",
            },
          ],
        },
        Object {
          "id": 2,
          "partTypes": Array [
            Object {
              "id": 2,
              "name": "find me",
            },
            Object {
              "id": 22,
              "name": "id 11",
            },
          ],
        },
      ]
    }
  />
</Fragment>
`;

exports[`EditModelInput it renders a part type field that has data that is not found 1`] = `
<Fragment>
  <PartTypeSelect
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
    partTypeSelected={202}
    sections={
      Array [
        Object {
          "id": 1,
          "partTypes": Array [
            Object {
              "id": 11,
              "name": "id 11",
            },
            Object {
              "id": 21,
              "name": "id 11",
            },
          ],
        },
        Object {
          "id": 2,
          "partTypes": Array [
            Object {
              "id": 2,
              "name": "find me",
            },
            Object {
              "id": 22,
              "name": "id 11",
            },
          ],
        },
      ]
    }
  />
</Fragment>
`;

exports[`EditModelInput it renders a supplier field that has data that is found 1`] = `
<Fragment>
  <SupplierSelect
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
    supplierSelected={2}
    suppliers={
      Array [
        Object {
          "id": 1,
          "supplier_name": "id is 1",
        },
        Object {
          "id": 2,
          "supplier_name": "find me",
        },
        Object {
          "id": 3,
          "supplier_name": "id is 3",
        },
      ]
    }
  />
</Fragment>
`;

exports[`EditModelInput it renders a supplier field that has data that is not found 1`] = `
<Fragment>
  <SupplierSelect
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
    supplierSelected={202}
    suppliers={
      Array [
        Object {
          "id": 1,
          "supplier_name": "id is 1",
        },
        Object {
          "id": 2,
          "supplier_name": "find me",
        },
        Object {
          "id": 3,
          "supplier_name": "id is 3",
        },
      ]
    }
  />
</Fragment>
`;

exports[`EditModelInput it renders a supplier field that has no data 1`] = `
<Fragment>
  <SupplierSelect
    disabled={false}
    error=""
    fieldName="data_field120"
    isEmptyAllowed={true}
    onChange={[Function]}
    suppliers={
      Array [
        Object {
          "id": 1,
          "supplier_name": "id is 1",
        },
        Object {
          "id": 2,
          "supplier_name": "find me",
        },
        Object {
          "id": 3,
          "supplier_name": "id is 3",
        },
      ]
    }
  />
</Fragment>
`;

exports[`EditModelInput it renders a text field that has data 1`] = `
<Fragment>
  <FormTextInput
    className=""
    dataType="text"
    error=""
    fieldName="data_field120"
    inputClass=""
    label=""
    list=""
    maxLength={10}
    onChange={[Function]}
    onClick={[Function]}
    placeholder=""
    size={30}
    title=""
    value="SHow text"
  />
</Fragment>
`;

exports[`EditModelInput it renders a text field that has no data 1`] = `
<Fragment>
  <FormTextInput
    className=""
    dataType="text"
    error=""
    fieldName="data_field120"
    inputClass=""
    label=""
    list=""
    maxLength={10}
    onChange={[Function]}
    onClick={[Function]}
    placeholder=""
    size={30}
    title=""
    value=""
  />
</Fragment>
`;

exports[`EditModelInput it renders a textarea field that has data 1`] = `
<Fragment>
  <FormTextAreaInput
    cols={50}
    error=""
    fieldName="data_field120"
    onChange={[Function]}
    onClick={[Function]}
    value="SHow text"
  />
</Fragment>
`;

exports[`EditModelInput it renders a textarea field that has no data 1`] = `
<Fragment>
  <FormTextAreaInput
    cols={50}
    error=""
    fieldName="data_field120"
    onChange={[Function]}
    onClick={[Function]}
    placeholder="put text here"
  />
</Fragment>
`;
